[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Log Fight.gd" type="Script" id=1]

[node name="Log Fight" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="WinnerText" type="RichTextLabel" parent="."]
margin_left = 173.0
margin_top = 110.0
margin_right = 303.0
margin_bottom = 150.0
text = "Choose fight winner"

[node name="LoserText" type="RichTextLabel" parent="."]
margin_left = 453.0
margin_top = 115.0
margin_right = 573.0
margin_bottom = 155.0
text = "Choose fight loser"

[node name="WinnerButton" type="OptionButton" parent="."]
margin_left = 275.0
margin_top = 135.0
margin_right = 304.0
margin_bottom = 155.0

[node name="LoserButton" type="OptionButton" parent="."]
margin_left = 539.0
margin_top = 135.0
margin_right = 568.0
margin_bottom = 155.0

[node name="OK" type="Button" parent="."]
margin_left = 706.0
margin_top = 126.0
margin_right = 737.0
margin_bottom = 146.0
text = "OK"

[node name="Button_Return" type="Button" parent="."]
margin_left = 342.0
margin_top = 251.0
margin_right = 489.0
margin_bottom = 271.0
text = "Return to Main menu"

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true
margin_left = 303.0
margin_top = 102.0
margin_right = 591.0
margin_bottom = 247.0
popup_exclusive = true

[node name="RichTextLabel" type="RichTextLabel" parent="PopupDialog"]
margin_right = 281.0
margin_bottom = 93.0

[node name="Yes_Popup" type="Button" parent="PopupDialog"]
margin_left = 79.0
margin_top = 113.0
margin_right = 113.0
margin_bottom = 133.0
text = "Yes"

[node name="No_Popup" type="Button" parent="PopupDialog"]
margin_left = 151.0
margin_top = 114.0
margin_right = 163.0
margin_bottom = 134.0
text = "No"

[node name="Logged_Confirmation" type="PopupDialog" parent="PopupDialog"]
visible = true
margin_left = 278.0
margin_top = 111.0
margin_right = 563.0
margin_bottom = 206.0

[node name="RichTextLabel" type="RichTextLabel" parent="PopupDialog/Logged_Confirmation"]
margin_left = 81.0
margin_top = 41.0
margin_right = 186.0
margin_bottom = 80.0
text = "Fight logged!"

[node name="Timer" type="Timer" parent="PopupDialog/Logged_Confirmation"]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="Button_Return" to="." method="_on_Button_Return_pressed"]
[connection signal="pressed" from="PopupDialog/Yes_Popup" to="." method="_on_Yes_Popup_pressed"]
[connection signal="pressed" from="PopupDialog/No_Popup" to="." method="_on_No_Popup_pressed"]
[connection signal="timeout" from="PopupDialog/Logged_Confirmation/Timer" to="." method="_on_Timer_timeout"]
